--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "module-13-challenge-orm",
+  "name": "project-2-group-8",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
