--- a/package.json
+++ b/package.json
@@ -1,31 +1,6 @@
 {
-  "name": "project-2-group-8",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "watch": "nodemon server.js",
-    "seed": "node seeds/index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git@work.github.com:coding-boot-camp/module-13-challenge-orm.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.19",
-    "tailwindcss": "^3.1.5"
-  },
   "dependencies": {
-    "@tailwindcss/forms": "^0.5.2",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-handlebars": "^6.0.6",
-    "mysql2": "^2.1.0",
-    "sequelize": "^5.21.7"
-  }
+    "@alch/alchemy-sdk": "^1.0.8"
+  },
+  "type": "module"
 }
