revert back to orig alchemy.js

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ DB_USER='root'
 DB_PW='root'
 DB_NAME='ecommerce_db'
 ALCHEMY_APP='https://eth-mainnet.g.alchemy.com/v2/_I4OcApTdih4EDZUNs3b4DdA6eGoh_63'
+ALCHEMY_API='_I4OcApTdih4EDZUNs3b4DdA6eGoh_63'
