--- a/package.json
+++ b/package.json
@@ -1,8 +1,23 @@
 {
+  "name": "project-2",
+  "version": "1.0.0",
+  "main": "server.js",
+  "license": "MIT",
+  "scripts": {
+    "start": "nodemon -r dotenv/config server.js"
+  },
   "dependencies": {
     "@alch/alchemy-sdk": "^1.0.8",
     "@alch/alchemy-web3": "^1.4.6",
-    "dotenv": "^16.0.1"
+    "@tailwindcss/forms": "^0.5.2",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^6.0.6",
+    "mysql2": "^2.1.0",
+    "sequelize": "^5.21.7"
   },
-  "type": "module"
+  "devDependencies": {
+    "nodemon": "^2.0.7",
+    "tailwindcss": "^3.1.6"
+  }
 }
