--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@alch/alchemy-sdk": "^1.0.8",
     "@alch/alchemy-web3": "^1.4.6",
     "@tailwindcss/forms": "^0.5.2",
+    "bcrypt": "^5.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^6.0.6",
