--- a/package.json
+++ b/package.json
@@ -1,30 +1,24 @@
 {
-  "name": "module-13-challenge-orm",
+  "name": "project-2",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
-    "seed": "node seeds/index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git@work.github.com:coding-boot-camp/module-13-challenge-orm.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.19",
-    "tailwindcss": "^3.1.5"
+    "start": "nodemon -r dotenv/config server.js"
   },
   "dependencies": {
+    "@alch/alchemy-sdk": "^1.0.8",
+    "@alch/alchemy-web3": "^1.4.6",
     "@tailwindcss/forms": "^0.5.2",
+    "bcrypt": "^5.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^6.0.6",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.7"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7",
+    "tailwindcss": "^3.1.6"
   }
 }
