--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 DB_USER='root'
-DB_PW='root'
-DB_NAME='ecommerce_db'
+DB_PW='rootntootn'
+DB_NAME='viewNFT_db_dev'
+JAWSDB_URL=''
 ALCHEMY_APP='https://eth-mainnet.g.alchemy.com/v2/_I4OcApTdih4EDZUNs3b4DdA6eGoh_63'
 ALCHEMY_API='_I4OcApTdih4EDZUNs3b4DdA6eGoh_63'
