--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": "17.x"
   },
   "scripts": {
-    "start": "nodemon -r dotenv/config server.js"
+    "start": "node server.js",
+    "watch": "nodemon -r dotenv/config server.js"
   },
   "dependencies": {
     "@alch/alchemy-sdk": "^1.0.8",
