--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "sequelize": "^6.21.3"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.4",
+    "autoprefixer": "^10.4.7",
     "nodemon": "^2.0.7",
+    "postcss": "^8.4.14",
     "tailwindcss": "^3.1.6"
   }
 }
